--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
   "devDependencies": {
     "nodemon": "^2.0.7"
   },
-  "keywords": ["battleship", "game", "api", "nodejs", "express", "sqlite"],
-  "author": "",
+  "keywords": [
+    "battleship",
+    "game",
+    "api",
+    "nodejs",
+    "express",
+    "sqlite"
+  ],
+  "author": "chathuranga",
   "license": "ISC"
 }
